--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-teste
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+<link rel="shortcut icon" type="image/x-icon" href="https://dummyimage.com/200x200/807380/000dc9.jpg&text=T">
+
+    <title>Minha página de teste</title>
+
+  </head>
+<! - Tudo que está entre  head /head são informações da pagina e entre  body /body 
+è a parte que mostra na pagina ->
+<p align="center">Teste
+</p> 
+<p align="center">
+<! – troque center por left ou right tanto nos textos quanto nas fotos->
+<img src="https://dummyimage.com/400x300/187390/.jpg&text=Teste" alt="Minha página de teste">
+</p>
+<! – troque 300x300, 807380, 000dc9 e Teste que está na imagem por outros valores->
+</body>
+
+
+</html>
